--- a/challenge_2/package.json
+++ b/challenge_2/package.json
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jQuery": "^1.7.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
