--- a/challenge_2/package.json
+++ b/challenge_2/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "jQuery": "^1.7.4"
+    "jQuery": "^1.7.4",
+    "underscore": "^1.12.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
