--- a/challenge_3/package.json
+++ b/challenge_3/package.json
@@ -6,19 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "nodemon": "nodemon server/server.js"
+    "nodemon": "nodemon server/server.js",
+    "babel": "./node_modules/.bin/babel client --out-dir public --presets @babel/preset-react --source-maps inline --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/preset-es2015": "^7.0.0-beta.53",
-    "@babel/preset-react": "^7.12.13",
-    "babel": "^6.23.0",
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "@babel/cli": "^7.12.16",
+    "@babel/core": "^7.12.16",
+    "@babel/preset-react": "^7.12.13",
     "express": "^4.17.1",
     "mongoose": "^5.11.16",
     "react": "^17.0.1",
