--- a/challenge_4/package.json
+++ b/challenge_4/package.json
@@ -21,7 +21,9 @@
     "webpack-cli": "^4.5.0"
   },
   "dependencies": {
+    "chai": "^4.3.4",
     "express": "^4.17.1",
+    "mocha": "^8.3.2",
     "nodemon": "^2.0.7"
   }
 }
