--- a/challenge_4/package.json
+++ b/challenge_4/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha test/gameOutcomes.js",
     "start": "node server.js",
     "react-dev": "webpack --watch",
     "nodemon": "nodemon server.js"
