--- a/challenge_2/package.json
+++ b/challenge_2/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "jQuery": "^1.7.4",
+    "multer": "^1.4.2",
     "underscore": "^1.12.1"
   },
   "devDependencies": {
